# PuzzleNFT

./: .gitignore  Anchor.toml  Cargo.toml  Makefile  README.md  package.json  parse.py  setup.sh  start-validator.sh
programs/puzzle_nft/: Cargo.toml
programs/puzzle_nft/src/: auth.rs  errors.rs  lib.rs  nft.rs  puzzle.rs  puzzle_utils.rs
programs/puzzle_nft/src/instructions/: create_collection.rs  mint_puzzle_nft.rs  mod.rs  solve_puzzle.rs
tests/: collection_tests.ts  minting_tests.ts  setup.ts  solving_tests.ts
