[package]
name = "puzzle_nft"
version = "0.1.0"
description = "On-Chain Puzzle NFTs with Metadata Evolution"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "puzzle_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
mpl-token-metadata = { version = "3.0.1", features = ["no-entrypoint"] }
solana-program = "1.16.0"
spl-token = { version = "4.0.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version = "2.0.0", features = ["no-entrypoint"] }