[package]
name = "puzzle_nft"
version = "0.1.0"
description = "A Solana program for minting NFTs with embedded puzzles that can be solved on-chain"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "puzzle_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.28.0"
anchor-spl = "0.28.0"
mpl-core = "0.1.0"
solana-program = "1.16.0"
sha2 = "0.10.7"
