[package]
name = "puzzle_nft"
version = "0.1.0"
description = "NFT Puzzle Program with mpl-core integration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "puzzle_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.29.0"
anchor-spl = "0.29.0"
mpl-core = "0.3.0"
mpl-token-metadata = "3.1.0"
solana-program = "1.17.0"
thiserror = "1.0.50"
